fix: :bug: make api docs background white on iOS

--- a/public/resources/scss/api.scss
+++ b/public/resources/scss/api.scss
@@ -5,6 +5,10 @@
 
 html {
     background: white;
+
+    &:before {
+      content: none;  
+    }
 }
 
 #packs-button,
